<resources>
    <string name="app_name">新电商3.1 SDK</string>
    <string name="webview_test">WebView代理</string>
    <string name="login_test">登录</string>
    <string name="logout_test">退出登录</string>
    <string name="transaction_test">电商交易</string>
    <string name="mine_test">订单与购物车</string>
    <string name="default_showurl">https://s.click.taobao.com/ghj</string>
    <string name="default_open">默认方式</string>
    <string name="taobao_open">手淘</string>
    <string name="tmall_open">天猫</string>
    <string name="h5_open">H5</string>
    <string name="open_type">打开方式:</string>
    <string name="commodity_type">商品类型:</string>
    <string name="common_commodity">普通商品</string>
    <string name="taoke_commodity">淘客商品</string>
    <string name="input_url">请输入URL:</string>
    <string name="open_url">打开URL</string>
    <string name="isconfuse">商品id是否混淆:</string>
    <string name="notconfuse">不混淆</string>
    <string name="confuse">混淆</string>
    <string name="input_itemid">请输入商品id:</string>
    <string name="itemid">542651106234</string>
    <string name="open_item">打开商品详情页</string>
    <string name="add_item_to_cart">添加商品到购物车</string>
    <string name="input_shopid">请输入店铺id:</string>
    <string name="shopid">60552065</string>
    <string name="open_shop">打开店铺</string>
    <string name="order_type">订单页面参数(仅在H5打开方式下有效):</string>
    <string name="order_all">全部</string>
    <string name="order_topay">待付款</string>
    <string name="order_tosend">待发货</string>
    <string name="order_toreceive">待收货</string>
    <string name="order_tocomment">待评价</string>
    <string name="show_order">分域显示我的订单</string>
    <string name="show_allorder">全部显示我的订单</string>
    <string name="show_cart">显示我的购物车</string>

    <string name="my_app_name">觅券儿</string>
    <string name="app_version">v1.9.5</string>
    <string name="app_not_release_hint">『我们在测试，当前版本用于接口申请，所有显示数据均为mock测试数据。』</string>
    <string name="app_slogen">秋名山上行人稀，常有车手竞高低。如今车道依旧在，不见当年老司机。</string>

    <string name="sign_in">登录</string>
    <string name="sign_in_fail_message">登录失败，%s</string>
    <string name="sign_in_fail_timeout">登录失败，网络连接超时&#38230;</string>
    <string name="sign_in_fail_network">登录失败，网络连接异常&#38230;</string>
    <string name="sign_up">注册</string>
    <string name="copy_right">Copyright&#169;云南升玥信息技术有限公司 版权所有</string>
    <string name="back">返回</string>
    <string name="phone_prefix">+86</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="photo_hint">点击设置头像</string>
    <string name="verification_code_hint">填写验证码</string>
    <string name="verification_code_resend">重新获取</string>
    <string name="verification_code_send">获取验证码</string>
    <string name="password_hint">输入密码（至少6位）</string>
    <string name="nick_name_hint">请输入你的名字或昵称(可选)</string>
    <string name="sign_up_finish">完成注册</string>
    <string name="sign_up_fail_message">注册失败，%s</string>
    <string name="sign_up_fail_timeout">注册失败，网络连接超时&#38230;</string>
    <string name="sign_up_fail_network">注册失败，网络连接异常&#38230;</string>
    <string name="sign_up_account">注册账号</string>
    <string name="has_problem">忘记密码？</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_fail_message">重置密码失败，%s</string>
    <string name="reset_password_fail_timeout">重置密码失败，网络连接超时&#38230;</string>
    <string name="reset_password_fail_network">重置密码失败，网络连接异常&#38230;</string>
    <string name="sign_out">注销</string>
    <string name="sign_out_confirm">确认注销吗？</string>
    <string name="cancel">取消</string>

    <string name="intro_skip">跳过</string>
    <string name="intro_done">立即体验</string>

    <string name="tab_discover">发现</string>
    <string name="tab_chat">报表</string>
    <string name="tab_message">消息</string>
    <string name="tab_account">我的</string>

    <string name="discover_tool_collection">收藏夹</string>
    <string name="discover_tool_coupon">优惠券清单</string>
    <string name="discover_tool_11">双11活动</string>
    <string name="discover_tool_convert">转链教程</string>
    <string name="discover_tool_novice">新手上路</string>

    <string name="discover_brand">品牌精选</string>
    <string name="discover_coupon">好券直播</string>

    <string name="discover_coupon_earn">赚 ¥ %1$s</string>
    <string name="discover_coupon_price_before">现价 ¥ %1$s</string>
    <string name="discover_coupon_sales_status">月销量 %1$s 件</string>
    <string name="discover_coupon_price_after">券后价 ¥ %1$s</string>
    <string name="discover_ju_price">聚划算价 ¥ %1$s</string>
    <string name="discover_coupon_value">券 | %1$s &#160;&#160;&#160;&#160;&#160;&#160; 余%2$s张</string>

    <string name="sort_bar_coupon">优惠</string>
    <string name="sort_bar_sales">综合</string>
    <string name="sort_bar_price">价格</string>
    <string name="sort_bar_commission">佣金</string>
    <string name="product_new">新品</string>
    <string name="product_price">%1$s¥ %2$s</string>
    <string name="product_sales">销%1$s</string>

    <string name="detail">宝贝推广信息</string>
    <string name="detail_view">详情</string>
    <string name="detail_price_after">券后价</string>
    <string name="detail_price_ju">聚划算价</string>
    <string name="detail_price_unit">¥</string>
    <string name="detail_price_before">现价&#160;¥ %1$s</string>
    <string name="detail_sales">已售%1$s件</string>
    <string name="detail_coupon">券 %1$s</string>
    <string name="detail_commission">预计赚 ¥%1$s</string>
    <string name="detail_commission_hint">该商品可能存在高佣金，加油升级才可查看～</string>
    <string name="detail_share">立即分享</string>
    <string name="detail_app">淘宝打开</string>

    <string name="share_title">创建分享</string>
    <string name="share_submit">分享</string>
    <string name="select_images">选择图片</string>
    <string name="selected_images">已选 %1$s 张</string>
    <string name="edit_share_text">编辑分享文案</string>
    <string name="share_text">%1$s\n&#160;&#160;【在售价】%2$s元\n&#160;&#160;【券后价】%3$s元\n&#160;&#160;【下单链接】{分享渠道后自动生成链接与口令}</string>
    <string name="share_app_text">%1$s\n&#160;&#160;【在售价】%2$s元\n&#160;&#160;【券后价】%3$s元\n&#160;&#160;【下单链接】{分享渠道后自动生成链接与口令}</string>
    <string name="share_text_link_hint">{分享渠道后自动生成链接与口令}</string>
    <string name="share_text_link">\n%1$s\n--------------------\n复制这条信息，%2$s，打开【手机淘宝】即可查看</string>
    <string name="share_text_only">仅复制文本文案</string>
    <string name="share_text_hint">请不要更改`{}`之间的文字哦~</string>
    <string name="share_explanation">觅券儿仅提供技术支持，请您自行确保分享内容真实合法（如不使用内部优惠券、好评返现等虚假描述）。</string>
    <string name="share_qrcode_hint">长按识别二维码</string>
    <string name="share_price_before">现价&#160;&#160;¥ %1$s</string>
    <string name="share_coupon">券</string>
    <string name="share_coupon_value">%1$s</string>
    <string name="share_price_after">券后价&#160;¥&#160;%1$s</string>

    <string name="account_id">ID: %1$s\n️%2$s</string>
    <string name="new_help">新手引导</string>
    <string name="account_description" />
    <string name="share_2_friends">分享给好友</string>
    <string name="help_report">帮助与反馈</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <string name="logo">Logo</string>
    <string name="app_intro">\t\t觅券儿app-电商导购行业专业app，汇集淘宝、京东、唯品会等各大电商平台优惠券，专业选品团队，每日精选好货，严格把控品质！网购买手必备，省钱、赚钱，就上觅券儿！\n专业选品团队，严控品质；\n各大网购平台优惠信息，每日更新；\n通信功能，信息实时触达；\n登录简单，操作便捷。</string>
    <string name="what_we_wish">觅券儿客户端致力于服务好广大用户，欢迎提出各种建议和反馈。</string>
    <string name="report_email">反馈邮箱：2033992811@qq.com。公众号二维码：</string>
    <string name="report">反馈</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>

    <string name="user_amount">可提取金额\n¥ %1$s</string>
    <string name="withdraw">提现</string>
    <string name="user_this_month_amount">本月结算预估收入\n¥ %1$s</string>
    <string name="user_last_month_amount">上月结算预估收入\n¥ %1$s</string>
    <string name="orders">订单明细</string>
    <string name="select_all_orders">所有订单</string>
    <string name="select_effective_orders">有效订单</string>
    <string name="select_ineffective_orders">失效订单</string>
    <string name="select_payed">已付款</string>
    <string name="select_consigned">已收货</string>
    <string name="select_settled">已结算</string>

    <string name="order_trade_price">付款金额\n¥ %1$s</string>
    <string name="order_estimate_effect">效果预估\n¥ %1$s</string>
    <string name="order_estimate_income">预估收入\n¥ %1$s</string>

    <string name="friends">我的团队</string>
    <string name="friends_amount">贡献 %1$s 元</string>

    <string name="search_title">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="atleast_select_one">请至少选择一张图片分享</string>
    <string name="atleast_share_one">分享文案不要留空</string>
    <string name="fail_message">操作失败，%s</string>
    <string name="fail_timeout">操作失败，网络连接超时&#38230;</string>
    <string name="fail_network">操作失败，网络连接异常&#38230;</string>
    <string name="fail_unknown">操作失败，发生未知异常&#38230;</string>
    <string name="orders_list_explaination">只有已结算订单才会计算预估收入</string>
    <string name="share_earn">赚 ¥ %1$s</string>
    <string name="need_report_content">反馈内容不能为空</string>
    <string name="select_template">选择模板</string>
    <string name="share_code">邀请码\n-&gt;%1$s&lt;-\n识别二维码可打开应用市场</string>
    <string name="waiting_for_download">您要分享的图片正在下载中，文案已经复制到粘贴板</string>
    <string name="enroll">申请成为合伙人</string>
    <string name="already_enrolled">您已经是合伙人了，无需再申请</string>
    <string name="enroll_description">申请后，我们的工作人员会及时审核。当审核通过后，您将需要重新登录，以更新客户端状态。\n\n一旦成为合伙人，您将拥有自己的团队，通过将APP分享给好友注册以及直接分享商品给好友带来收入。\n\n同时，由于相关规定，成为合伙人后将不能享受普通购买者的优惠，不能在APP内跳转手淘。</string>
    <string name="alipay_hint">请输入绑定以上姓名的支付宝</string>
    <string name="qq_hint">请输入QQ号，特殊可选</string>
    <string name="wechat_hint">请输入微信号，特殊可选</string>
    <string name="announcement_hint">请说明您申请成为合伙人的理由</string>
    <string name="user_amount_not_enough">可提现金额不足</string>
    <string name="how_much_to_withdraw">请输入提现金额</string>
    <string name="withdraw_record_created">已经为您创建提现申请记录，工作人员会及时与您取得联系</string>
    <string name="withdraw_description">在此创建提现申请，工作人员会及时与您取得联系</string>
    <string name="user_amount_threshold">至少10元才可提现</string>
    <string name="name_hint">请输入您的真实姓名</string>
    <string name="invitation_code_hint">邀请码</string>
    <string name="lack_of_invitation_hint">输入邀请码，可以实时准确的获得优惠信息</string>
    <string name="to_edit_invation_code">去填邀请码</string>
    <string name="to_register_directly">直接注册</string>
    <string name="re_login_confirm">重新登录</string>
    <string name="re_login_hint">您需要重新登录</string>
    <string name="select_tb">淘宝商城</string>
    <string name="select_jd">京东商城</string>
    <string name="we_have_underline">我们是有底线的</string>

    <string name="go_to_update">去下载</string>
    <string name="version_low">您当前版本过低，为了更好的使用觅券儿，请立刻升级！</string>
    <string name="get_it">知道了</string>
    <string name="get_report">我们已经收到您到的反馈信息</string>
    <string name="sign_in_anonymous">随便看看</string>
    <string name="data_load_fail">数据加载失败</string>

    <string name="miquaner_money">¥%1$s</string>
    <string name="miquaner_coupon">券 %1$s</string>
    <string name="miquaner_coupon_btn">领 %1$s 券</string>
    <string name="qq_weChat_hint">QQ和微信号至少填写一个\n方便您的客户联系您</string>
    <string name="name_label">姓名</string>
    <string name="alipay_label">支付宝</string>
    <string name="phone_label">手机号</string>
    <string name="verification_code_label">验证码</string>
    <string name="complete_info">补全信息</string>
    <string name="customer_serv">客服中心</string>
    <string name="qq_title">QQ</string>
    <string name="weChat_title">微信</string>
    <string name="go_to_weChat">去微信查找</string>
    <string name="go_to_qq">去QQ查找</string>
    <string name="upload_image_handle">添加图片</string>
    <string name="upload_image_ing">上传中...</string>

</resources>
