<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_action_handle_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/len_20"
            android:paddingRight="@dimen/len_20">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/select_images"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/selected_images"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </FrameLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/share_image_list"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/trans"
                android:orientation="horizontal"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/edit_share_text"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/share_text"
                android:gravity="top"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="text"
                android:background="@drawable/border_1dp_with_pad"/>

            <LinearLayout
                android:id="@+id/share_text_only"
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_40"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <com.mikepenz.iconics.view.IconicsTextView
                    android:layout_width="25dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="{ion-ios-copy-outline}"
                    android:textColor="@color/orange_300"
                    android:textSize="@dimen/font_22"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/share_text_only"
                    android:textColor="@color/orange_300"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_explanation"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>