<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="@dimen/len_56"
        android:paddingLeft="@dimen/len_56"
        android:paddingRight="@dimen/len_56"
        android:paddingStart="@dimen/len_56">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_72"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verification_code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/verification_code_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/len_6"
                android:layout_marginStart="@dimen/len_6"
                android:text="@string/verification_code_resend"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/len_6"
            android:background="@color/grey_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_12"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="@dimen/font_16" />

            <com.mikepenz.iconics.view.IconicsTextView
                android:id="@+id/password_visiable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{gmi-eye}"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/font_20"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/len_6"
            android:background="@color/grey_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_12"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nick_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/nick_name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/len_6"
            android:background="@color/grey_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_12"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/invitation_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/invitation_code_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/len_6"
            android:background="@color/grey_800" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_36"
            android:background="@drawable/sign_in_up_next_border"
            android:padding="@dimen/len_10">

            <TextView
                android:id="@+id/sign_up_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_finish"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16" />

            <ProgressBar
                android:id="@+id/progress"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_48"
            tools:ignore="UselessLeaf" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/len_8"
        android:layout_marginStart="@dimen/len_8"
        android:layout_marginTop="@dimen/len_8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.mikepenz.iconics.view.IconicsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{gmi-chevron-left}"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_6"
            android:layout_marginStart="@dimen/len_6"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16" />
    </LinearLayout>


</FrameLayout>